@@ -1,5 +1,6 @@
 0.1.12:
 
+* segway: trains on all sequence in both forward and reverse direction (temporary)
 * segway: LEN_SEG_EXPECTED becomes 100000
 * segway: P(segTransition(0) | segCountDown(-1), seg(-1)) is now weighted with scale 20
 * segway: fixed --semisupervised bugs
